src/parser/test/esprima/invalid-syntax/strict_assignment_interface.js
function hello() { "use strict"; interface = 1; }
